--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,12 @@
         box-shadow: 0 5px 15px rgba(0, 0, 0, .06);
         transition: .5s ease;
       }
+
+      /* queryrules */
+
+      @media  screen and (max-width:600px) {
+      
+      }
       .logo{
         margin-right: auto;
         color: black;
@@ -191,6 +197,18 @@
         box-shadow: 50% rgba(0, 0, 0,.06) ;
     }
 
+    /* mediaquery rules */
+
+    @media screen and (max-width:600px){
+        .about-container{
+            display: block;
+            width: 80%;
+            justify-content: center;
+            margin-left: 60px;
+        }
+        
+    }
+
     /*SERVICE STYLES*/
     section.services{
         min-height: 90vh;
@@ -227,6 +245,28 @@ color: var(--main-color);
         align-items: center;
         margin: 5px;
     }
+
+    /* mediaquery-rules  */
+
+    @media screen and (max-width:600px) {
+        .service-box{ display: flex;
+            flex-wrap: wrap;
+            width: 80%;
+            justify-content: center;
+            margin-left: 60px;
+            border-radius: 50%;
+        }
+       
+        .service-container{
+            width: 10%;
+            min-width:250px ;
+            border: 2px solid whitesmoke;
+                }
+        }
+        
+    
+
+    /* portfolio  */
     section.portfolio h2{
         text-align: center;
         margin-bottom: 20px;
@@ -241,12 +281,26 @@ border: 2px solid var(--main-color);
  .portfolio-container img{
         width: 100%;
         border-radius: 10px;
+        box-shadow: 0 5px 5px 0 rgba(0, 0, 0, .06);
     }
     .portfolio-container {
        display: grid;
        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
        flex: wrap;
        gap: 20px;
+    }
+
+    /* mediaquery-rules  */
+    @media screen and (max-width:600px){
+        .portfolio-container {
+            display: flex;
+            width: 50%;
+            height: 50%;
+            flex-wrap: wrap;
+            border-radius: 50%;
+            gap: 20px;
+            margin-left: 60px;
+         }
     }
  .contacts{
     min-height: 60vh;
@@ -261,12 +315,12 @@ border: 2px solid var(--main-color);
     grid-template-columns: 1fr 1fr;
  }
  .contact-box .contact-text{
-    padding: 3rem 7%;
+    /* padding: 3rem 7%; */
     margin-left: 30px;
  }
  .contact-text h5{
     margin-top: 30px;
-    font-size: 20px;
+    font-size: 80%;
     font-weight: 50;
  }
 .contact-text h5 span{
@@ -295,10 +349,35 @@ border: 2px solid var(--main-color);
     box-shadow: 0 5px 15px rgba(0, 0, 0, .06);
 
 }
-.form button{
-    background-color: transparent;
-}
-button input{
-    border-radius: 0;
-}
 
+.submit{
+    background-color: var(--main-color);
+    cursor: pointer;
+}
+.submit:hover{
+    background-color: rgb(142, 94, 5);
+}
+/* query-rules */
+ @media  screen and (max-width:600px) {
+    /* .contact-box{
+        display:flex;
+        flex-wrap: wrap;
+        min-height: none;
+    } */
+    .contact-text{
+        margin-top: 400px;
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .form{
+        margin-right: 100px;
+        display: flex;
+        padding: 10px;
+    }
+    .form input{
+margin-top: 10px;
+display: flex;
+    }
+    
+    
+ }
