--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,7 @@
 
     }
     .nav a:hover{
+    
         color: orange;
         border-bottom: 2px solid var(--main-color);
     }
@@ -84,7 +85,23 @@
         padding: 20px;
         opacity: .9;
     }
+          
 
+
+    /* mediarules */
+    @media  screen and (max-width:600px) {
+        .nav a{
+            display: block;
+            margin-left: 350px;
+        }
+        
+        .nav a:hover{
+            color:var(--main-color);
+            border-bottom: none;
+        }
+       
+        
+    }
 
 
                             /*HOME-SECTION STYLES*/
@@ -228,8 +245,8 @@ text-decoration-line:unset;
 
     .service-container{
 width: 23%;
-min-width:250px ;
-padding: 10px 12px;
+min-width:200px ;
+padding: 10px 15px;
 border: 2px solid whitesmoke;
     }
     .service-container img{
@@ -260,6 +277,10 @@ color: var(--main-color);
         .service-container{
             width: 10%;
             min-width:250px ;
+            display: flex;
+            gap: 20px;
+
+            flex-wrap: wrap;
             border: 2px solid whitesmoke;
                 }
         }
@@ -272,25 +293,83 @@ color: var(--main-color);
         margin-bottom: 20px;
     }
 
-    .portfolio-box .portfolio-container{
-        width: 23%;
-min-width:250px ;
-padding: 10px 12px;
-border: 2px solid var(--main-color);
-    }
- .portfolio-container img{
-        width: 100%;
-        border-radius: 10px;
-        box-shadow: 0 5px 5px 0 rgba(0, 0, 0, .06);
-    }
-    .portfolio-container {
-       display: grid;
-       grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-       flex: wrap;
-       gap: 20px;
-    }
 
-    /* mediaquery-rules  */
+
+   nav{
+    
+    margin: 30px;
+    justify-content: center;
+    text-align: center;
+    
+   }
+   nav span.item{
+    color: var(--main-color);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, .06);   
+    border-radius: 50px;
+    padding: 15px;
+    cursor: pointer;
+    transition: .3s ease;
+    background-color: white;
+   }
+   nav span.item:hover{
+    padding: 20px;
+
+   }
+   .portfolio-container .img{
+    width:calc(60% / 4);
+    overflow: hidden;
+    transition: in ease-in-out .3s ease;
+
+   }
+   .portfolio-container .img img{
+    transition: .3s ease-in-out ;
+    cursor: pointer;
+   }
+   .img img{ 
+    width: 100%;
+    vertical-align: middle;
+   }
+   .portfolio-container .img:hover img{
+    transform: scale(1.1);
+   }
+   .portfolio-container{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    gap:10px;
+   }
+
+   @media  screen and (max-width:1100px) {
+    nav span.item{
+        display: flex;
+        flex-wrap: wrap;
+    }
+    
+   }
+   @media  screen and (max-width:900px) {
+    nav span.item{
+        display: flex;
+        flex-wrap: wrap;
+    }
+    
+   }
+   @media  screen and (max-width:700px) {
+    nav span.item{
+        display: flex;
+        flex-wrap: wrap;
+    }
+    
+   }
+   @media  screen and (max-width:600px) {
+    nav span.item{
+        display: flex;
+        flex-wrap: wrap;
+    }
+    
+   }
+
     @media screen and (max-width:600px){
         .portfolio-container {
             display: flex;
